# dse-static-playwright

./: .gitignore  README.md  package.json  playwright.config.ts  pyproject.toml  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
e2e/specs/: edition_string_match.spec.ts  edition_view.spec.ts
e2e/test-data/: D_000002-003-000.json
e2e/utils/: helpers.ts
html/js/: noske-search.js  search.js
scss/: _fonts.scss  _theme.scss  _utilities.scss  _variables.scss
xslt/: index.xsl
xslt/partials/: params.xsl  shared.xsl
